[project]
name = "visualise-np"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-identity>=1.25.3",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "pyodbc>=5.3.0",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
